Fixed autocomplete colors

--- a/app/src/main/res/layout/activity_ingredients.xml
+++ b/app/src/main/res/layout/activity_ingredients.xml
@@ -58,7 +58,8 @@
                             android:layout_marginTop="30dp"
                             android:ems="15"
                             android:hint="Search for ingredients"
-                            android:textColor="#0D4D4D"/>
+                            android:textColor="#0D4D4D"
+                            android:textColorHint="#0D4D4D"/>
 
                         <ImageView
                             android:id="@+id/imageView"
