--- a/app/src/main/res/layout/activity_ingredients.xml
+++ b/app/src/main/res/layout/activity_ingredients.xml
@@ -35,7 +35,7 @@
                 <RelativeLayout
                     android:id="@+id/searchTab"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="501dp"
                     android:orientation="vertical"
                     android:paddingTop="@dimen/activity_vertical_margin">
 
@@ -77,11 +77,13 @@
                         android:id="@+id/txtSuggested"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/layoutSearchField"
-                        android:layout_marginTop="50dp"
                         android:text="Suggested:"
                         android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:textColor="#0D4D4D" />
+                        android:textColor="#0D4D4D"
+                        android:layout_below="@+id/layoutSearchField"
+                        android:layout_alignParentRight="false"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentLeft="true" />
 
                     <HorizontalScrollView
                         android:id="@+id/horizontalScrollView"
@@ -211,11 +213,11 @@
                         android:id="@+id/txtChosen"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/horizontalScrollView"
-                        android:layout_marginTop="50dp"
                         android:text="Chosen:"
                         android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:textColor="#0D4D4D" />
+                        android:layout_below="@+id/horizontalScrollView"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentStart="true" />
 
                     <ScrollView
                         android:layout_width="match_parent"
@@ -231,6 +233,39 @@
                         </org.apmem.tools.layouts.FlowLayout>
 
                     </ScrollView>
+
+                    <Button
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Search"
+                        android:id="@+id/searchButton"
+                        android:onClick="search"
+                        android:layout_alignParentBottom="true"
+                        android:layout_centerHorizontal="true"
+                        android:textColor="#0D4D4D" />
+
+                    <CheckBox
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="All of these"
+                        android:id="@+id/all"
+                        android:layout_alignTop="@+id/searchButton"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentBottom="true"
+                        android:textColor="#0D4D4D" />
+
+                    <CheckBox
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text=" Only these"
+                        android:id="@+id/only"
+                        android:layout_alignTop="@+id/searchButton"
+                        android:layout_alignRight="@+id/layoutSearchField"
+                        android:layout_alignEnd="@+id/layoutSearchField"
+                        android:layout_alignParentBottom="true"
+                        android:layout_alignParentRight="true"
+                        android:textColor="#0D4D4D" />
 
                 </RelativeLayout>
 
