--- a/app/src/main/res/layout/activity_ingredients.xml
+++ b/app/src/main/res/layout/activity_ingredients.xml
@@ -51,8 +51,8 @@
                             android:id="@+id/autoCompleteTextView"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="30dp"
                             android:ems="15"
+
                             android:hint="Search for ingredients"
                             android:textColor="#0D4D4D"
                             android:textColorHint="#0D4D4D" />
@@ -77,7 +77,7 @@
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentRight="false"
                         android:layout_below="@+id/layoutSearchField"
-                        android:layout_marginTop="50dp"
+                        android:layout_marginTop="20dp"
                         android:text="Suggested:"
                         android:textAppearance="?android:attr/textAppearanceMedium"
                         android:textColor="#0D4D4D" />
@@ -213,7 +213,7 @@
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentStart="true"
                         android:layout_below="@+id/horizontalScrollView"
-                        android:layout_marginTop="50dp"
+                        android:layout_marginTop="20dp"
                         android:text="Chosen:"
                         android:textAppearance="?android:attr/textAppearanceMedium"
                         android:textColor="#0D4D4D" />
@@ -234,8 +234,8 @@
                         android:layout_height="wrap_content"
                         android:layout_above="@+id/searchButton"
                         android:layout_centerHorizontal="true"
-                        android:layout_marginBottom="10dp"
-                        android:layout_marginTop="50dp"
+                        android:layout_marginBottom="7dp"
+                        android:layout_marginTop="20dp"
                         android:id="@+id/searchOptions"
                         android:orientation="horizontal">
 
@@ -243,15 +243,15 @@
                             android:id="@+id/all"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginRight="20dp"
-                            android:text="All these are present"
+                            android:layout_marginRight="15dp"
+                            android:text="All these present"
                             android:textColor="#0D4D4D" />
 
                         <CheckBox
                             android:id="@+id/only"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Only these are present"
+                            android:text="Only these present"
                             android:textColor="#0D4D4D" />
 
                     </LinearLayout>
