--- a/app/src/main/res/layout/activity_ingredients.xml
+++ b/app/src/main/res/layout/activity_ingredients.xml
@@ -41,33 +41,32 @@
                     android:orientation="vertical"
                     android:paddingTop="@dimen/activity_vertical_margin">
 
-                    <RelativeLayout
+                    <LinearLayout
                         android:id="@+id/layoutSearchField"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_centerHorizontal="true">
-
-                        <AutoCompleteTextView
-                            android:id="@+id/autoCompleteTextView"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:ems="15"
-
-                            android:hint="Search for ingredients"
-                            android:textColor="#0D4D4D"
-                            android:textColorHint="#0D4D4D" />
+                        android:layout_centerHorizontal="true"
+                        android:orientation="horizontal">
 
                         <ImageView
                             android:id="@+id/imageView"
                             android:layout_width="25dp"
                             android:layout_height="30dp"
-                            android:layout_alignBottom="@+id/autoCompleteTextView"
-                            android:layout_alignTop="@+id/autoCompleteTextView"
                             android:layout_marginRight="3dp"
-                            android:layout_toLeftOf="@+id/autoCompleteTextView"
+                            android:layout_marginTop="8dp"
                             android:background="@drawable/search" />
 
-                    </RelativeLayout>
+                        <AutoCompleteTextView
+                            android:id="@+id/autoCompleteTextView"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:ems="12"
+                            android:singleLine="true"
+                            android:hint="Search for ingredients"
+                            android:textColor="#0D4D4D"
+                            android:textColorHint="#0D4D4D" />
+
+                    </LinearLayout>
 
                     <TextView
                         android:id="@+id/txtSuggested"
